# snake-rl

./: .gitignore  pyproject.toml  requirements.txt
results/: train_20260213_200918.txt  train_20260213_210829.txt
src/scripts/: test_env.py  train_dqn.py  train_q_table.py
src/snake_rl/agent/: dqn_agent.py  q_table_agent.py  replay_buffer.py
src/snake_rl/env/: snake_env.py
src/snake_rl/models/: dqn_model.py
src/snake_rl/training/: trainer.py
